--- a/1.html
+++ b/1.html
@@ -1,15 +1,15 @@
 <title>HTML</title>
-<meta charset="uff-8">
-<h1><a herf="index.html">WEB</a></h1>
+<meta charset="utf-8">
+<h1><a href="index.htm">WEB</a></h1>
 <ul>
 <ol>
     <li><a href="1.html">html</a></li>
     <li><a href="2.html">CSS</a></li>
-    <li><a href="3.html">/JavasCript</li>
+    <li><a href="3.html">/JAVASCRIPT</li>
 </ol>
 </ul>
-    <H2>HTML을 배우고 웹 페이지를 만들자~!</H2>
+    <H2>html을 배운다</H2>
 <p>
-웹 페이지는 어렵다.
+d;sakldjflksdjflsdjfl jsdfjdlsjfklsdjflkj
 </p>
-<img src="img1.jpg" width="100%"
+<img src="img1.jpg" width="50%"> 
