--- a/2.html
+++ b/2.html
@@ -1,15 +1,15 @@
 <title>CSS</title>
-<meta charset="uff-8">
-<h1><a herf="index.html">WEB</a></h1>
+<meta charset="utf-8">
+<h1><a href="index.htm">WEB</a></h1>
 <ul>
 <ol>
     <li><a href="1.html">html</a></li>
     <li><a href="2.html">CSS</a></li>
-    <li><a href="3.html">/JavasCript</li>
+    <li><a href="3.html">/JAVASCRIPT</li>
 </ol>
 </ul>
-    <H2>CSS을 배우고 웹 페이지를 만들자~!</H2>
+    <H2>css 단어를 배워 보았다~~~~!</H2>
 <p>
-웹 페이지는 어렵다2
+css는 그냥 겁나게 어려운 컴퓨터 언어이다 
 </p>
-<img src="img1.jpg" width="100%"
+<img src="img1.jpg" width="50%"> 
