--- a/3.html
+++ b/3.html
@@ -1,15 +1,16 @@
-<title>/javascript</title>
-<meta charset="uff-8">
-<h1><a herf="index.html">WEB</a></h1>
+<title>JAVASCRIPT</title>
+<meta charset="utf-8">
+<h1><a href="index.htm">WEB</a></h1>
 <ul>
 <ol>
     <li><a href="1.html">html</a></li>
     <li><a href="2.html">CSS</a></li>
-    <li><a href="3.html">/JavasCript</li>
+    <li><a href="3.html">/JAVASCRIPT</li>
 </ol>
 </ul>
-    <H2>JavaScript을 배우고 웹 페이지를 만들자~!</H2>
+
+    <H2>/JAVASCRIPT</H2>
 <p>
-웹 페이지는 어렵다3
+djlksadjflksdjflsdjflsdjlfjlsd
 </p>
-<img src="img1.jpg" width="100%"
+<img src="img1.jpg" width="50%"> 
