--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
-<title>WEB - html1</title>
-<meta charset="uft-8">
+<title>웹 패이지</title>
+<meta charset="utf-8">
 <h1><a href="index.html">WEB</a></h1>
 <ul>
 <ol>
-    <li><a href="1.html">HTML</a></li>
+    <li><a href="1.html">html</a></li>
     <li><a href="2.html">CSS</a></li>
-    <li><a href="3.html">JavasCript</a></li>
+    <li><a href="3.html">/JAVASCRIPT</a></li>
 </ol>
 </ul>
 
-    <H2>WEB 단어를 배운다~</H2>
+    <H2>WEB 단어를 배워 보았다~~~~!</H2>
 <p>
-    안녕하세요 이 웹을 만든 사람은 류XX입니다.
+    <u><strong><a href="https://www.w3.org/TR/2011/WD-html5-20110405/text-level-semantics.html#the-a-element" target="_blank" title="html5 speicification">Hypertext Marcup Language (HTML)</a><br>
+    Sheets (CSS) and JAVASCRIPT<br>
+    from a web server or from lorem<br>
+    semantically and orininally<br></strong></u>
 </p>
-<img src="img1.jpg" width="100%">
+<img src="img1.jpg" width="50%"> 
+<head>dkjaklsjfklsdjflksjfklj</head>
