--- a/4.html
+++ b/4.html
@@ -10,6 +10,6 @@
 </ol>
     <h2>웹 페지 이 걍 그렇다.</h2>
 <p>
-<h1><a href="https://namu.wiki/w/JS" target="_blank" title="JavaScript나무 위키">JavaScript</a>을 배워서 웹 페이지를 만들어 보자~~!</h1>
+<h1><a href="https://namu.wiki/w/HTML" target="_blank" title="html나무 위키">HTML</a>을 배워서 웹 페이지를 만들어 보자~~!</h1>
 </p>
 <img src="img1.jpg" width="100%"
