--- a/index1.html
+++ b/index1.html
@@ -10,7 +10,7 @@
 </ol>
 <h2>html</h2>
 <p>
-    <a href="https://namu.wiki/w/HTML" target="_blank" title="html나무 위키">HTML</a>(Hypertext Markup languge)eun web peiji mich web eung-yong peulogeulaem-eul mandeulgi wihan pyojun makeueob eon-eoibnida. web seobeo ttoneun lorem-ui siteu(CSS) mich JavaScriptleul uimilonjeog-eulo sayong
+    HTML(Hypertext Markup languge)eun web peiji mich web eung-yong peulogeulaem-eul mandeulgi wihan pyojun makeueob eon-eoibnida. web seobeo ttoneun lorem-ui siteu(CSS) mich JavaScriptleul uimilonjeog-eulo sayong
 </p>
 <img src="img1.jpg" width="100%">
 <input type="checkbox">
