--- a/index1.html
+++ b/index1.html
@@ -1,6 +1,6 @@
 <title>WEB - HTML</title>
 <meta charset="utf-8">
-<h1><a href="복습.html">WEB(홈)</a></h1>
+<h1><a href="index1.html">WEB(홈)</a></h1>
 <ol>
 <ul>
     <li><a href="4.html">HTML</a></li>
