--- a/index1.html
+++ b/index1.html
@@ -1,16 +1,17 @@
-<title>WEB - HTML</title>
-<meta charset="utf-8">
-<h1><a href="index1.html">WEB(홈)</a></h1>
-<ol>
+<title>WEB - html1</title>
+<meta charset="uft-8">
+<h1><a href="index1.html">WEB</a></h1>
 <ul>
+<ol>
     <li><a href="4.html">HTML</a></li>
     <li><a href="5.html">CSS</a></li>
-    <li><a href="6.html">JavaScript</a></li>
-</ul>
+    <li><a href="6.html">JavasCript</a></li>
 </ol>
-<h2>html</h2>
+</ul>
+
+    <H2>WEB 단어를 배운다~</H2>
 <p>
-    HTML(Hypertext Markup languge)eun web peiji mich web eung-yong peulogeulaem-eul mandeulgi wihan pyojun makeueob eon-eoibnida. web seobeo ttoneun lorem-ui siteu(CSS) mich JavaScriptleul uimilonjeog-eulo sayong
+    <strong><u>웹</u> 페이지</strong>, 우리가 배워서 제대로 해봐야지~
 </p>
-<img src="img1.jpg" width="100%">
+<img src="웹개발.jpg" width="50%">
 <input type="checkbox">
