--- a/4.html
+++ b/4.html
@@ -1,15 +1,14 @@
 <title>HTML</title>
-<meta charset="utf-8">
-<h1><a href="index1.html">WEB(홈)</a></h1>
-<ol>
+<meta charset="uff-8">
+<h1><a href="index1.html">WEB</a></h1>
 <ul>
-    <li><a href="4.html">HTML</a></li>
+<ol>
+    <li><a href="4.html">html</a></li>
     <li><a href="5.html">CSS</a></li>
-    <li><a href="6.html">JavaScript</a></li>
-</ul>
+    <li><a href="6.html">JavasCript</li>
 </ol>
-    <h2>웹 페지 이 걍 그렇다.</h2>
+</ul>
+    <H2><a href="https://namu.wiki/w/HTML" target="_blank" title="HTML나무위키">HTML</a>을 배우고 웹 페이지를 만들자~!</H2>
 <p>
-<h1><a href="https://namu.wiki/w/HTML" target="_blank" title="html나무 위키">HTML</a>을 배워서 웹 페이지를 만들어 보자~~!</h1>
+웹 페이지는 이제 그냥 뭐 그렇다.
 </p>
-<img src="img1.jpg" width="100%"
