--- a/6.html
+++ b/6.html
@@ -1,6 +1,6 @@
 <title>JavaScript</title>
 <meta charset="uff-8">
-<h1><a href="index1.html">WEB</a></h1>
+<h1><a href="index.html">WEB</a></h1>
 <ul>
 <ol>
     <li><a href="4.html">html</a></li>
