--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <title>WEB - html1</title>
 <meta charset="uft-8">
-<h1><a href="index1.html">WEB</a></h1>
+<h1><a href="index.html">WEB</a></h1>
 <ul>
 <ol>
     <li><a href="4.html">HTML</a></li>
