--- a/6.html
+++ b/6.html
@@ -8,7 +8,7 @@
     <li><a href="6.html">JavasCript</li>
 </ol>
 </ul>
-    <H2><a href="https://namu.wiki/w/JS" target="_blank" title="JavaScript">CSS</a>을 배우고 웹 페이지를 만들자~!</H2>
+    <H2><a href="https://namu.wiki/w/JS" target="_blank" title="JavaScript나무위키">JavaScript</a>를 배우고 웹 페이지를 만들자~!</H2>
 <p>
 웹 페이지는 이제 그냥 뭐 그렇다.
 </p>
